--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,58 +1,45 @@
 name: PlayerUtilities
-version: 1.0.0
+version: '1.0'
 main: com.lozaine.playerutilities.PlayerUtilities
 api-version: '1.21'
-description: Provides various utilities for players including fly, god mode, and world teleportation.
-author: Lozaine
-depend: [Multiverse-Core]
-softdepend: []
-
+description: Utilities for player management including fly, godmode, teleport
 commands:
-  fly:
-    description: Toggles flight mode and adjust flight speed
-    usage: /fly [speed]
-    permission: playerutilities.fly
-    permission-message: You don't have permission to use this command.
-    aliases: [flight]
-
-  god:
-    description: Toggles god mode with full health/hunger restoration
-    usage: /god
-    permission: playerutilities.god
-    permission-message: You don't have permission to use this command.
-    aliases: [godmode, invulnerable]
-
+  flyspeed:
+    description: Adjust your fly speed
+    usage: /<command> <speed>
+    permission: playerutilities.flyspeed
+    aliases: [fs]
   worldtp:
-    description: Opens a GUI to teleport between worlds
-    usage: /worldtp
-    permission: playerutilities.teleport
-    permission-message: You don't have permission to use this command.
-    aliases: [wtp, worldteleport]
-
+    description: Open a GUI to teleport between worlds
+    usage: /<command>
+    permission: playerutilities.worldtp
+    aliases: [wtp]
+  god:
+    description: Toggle god mode
+    usage: /<command> [player]
+    permission: playerutilities.god
+  fly:
+    description: Toggle fly mode
+    usage: /<command> [player]
+    permission: playerutilities.fly
 permissions:
-  playerutilities.fly:
-    description: Allows player to toggle flight and adjust flight speed
+  playerutilities.flyspeed:
+    description: Allows players to change their fly speed
     default: op
-
+  playerutilities.worldtp:
+    description: Allows players to teleport between worlds
+    default: op
   playerutilities.god:
-    description: Allows player to toggle god mode
+    description: Allows players to toggle god mode
     default: op
-
-  playerutilities.god.others:
-    description: Allows player to toggle god mode for other players
+  playerutilities.fly:
+    description: Allows players to toggle fly mode
+    default: op
+  playerutilities.admin:
+    description: Gives all permissions
     default: op
     children:
+      playerutilities.flyspeed: true
+      playerutilities.worldtp: true
       playerutilities.god: true
-
-  playerutilities.teleport:
-    description: Allows player to teleport between worlds
-    default: op
-
-  playerutilities.*:
-    description: Gives access to all PlayerUtilities commands
-    default: op
-    children:
       playerutilities.fly: true
-      playerutilities.god: true
-      playerutilities.god.others: true
-      playerutilities.teleport: true
